--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
   <h2 class="h1">Sharpen your skills</h2>
   <p class="big-text">Dig into AI-focused webinars, docs, trainings, and more.</p>
 </div>
+<div class="container">
 <div class="row align-items-center sharpen-section">
                 <div class="col-12 col-lg-4">
                     <div class="card mb-3">
@@ -289,6 +290,7 @@
                 <div class="col-12 col-lg-8 mb-4">
                     <img class="border-round" src="images/sharpen.jpg" alt="" role="presentation">
                 </div>
+</div>
 </div>
 
 
